--- a/amenities.html
+++ b/amenities.html
@@ -26,7 +26,7 @@
                               <a class="nav-link" href="amenities.html" target="_blank">MENU PRINCIPAL</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="salir.html">SALIR</a>
+                              <a class="nav-link" href="#">SALIR</a>
                             </li>
                           </ul>
                     </nav>
@@ -35,6 +35,9 @@
         </div>
     </header>
     <main>
+        <section>
+         <p class="fs-2">Seleccione el amenitie que desee reservar</p>
+        </section>
         <section>
             <a href="parrilla.html" target="_blank">
                 <img class="imagen_menu_principal" src="./ReservAR_img/parrilla_edificio.jpg" alt="parrilla-edeficio" title="parrilla" id="parilla" style="width: 250px; padding: 20px;">
