--- a/comentarios.html
+++ b/comentarios.html
@@ -33,6 +33,9 @@
         </div>
     </header>
     <main>
+        <section>
+            <p class="fs-4">Deje a continuación el comentario que desee.</p>
+           </section>
 
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
