--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
                               <a class="nav-link" href="amenities.html" target="_blank">MENU PRINCIPAL</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="salir.html">SALIR</a>
+                              <a class="nav-link" href="#">SALIR</a>
                             </li>
                           </ul>
                     </nav>
@@ -35,6 +35,9 @@
         </div>
     </header>
         <main>
+            <section>
+                <p class="fs-4">A continuación seleccione el medio por el cual desea ser contactado y deje el motivo del mismo</p>
+               </section>
             <div class="form-floating mb-5">
                 <input type="email" class="form-control" id="floatingInputDisabled" placeholder="name@example.com">
                 <label for="floatingInputDisabled">Direccion de email</label>
