--- a/jacuzzi.html
+++ b/jacuzzi.html
@@ -26,7 +26,7 @@
                               <a class="nav-link" href="amenities.html" target="_blank">MENU PRINCIPAL</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="salir.html">SALIR</a>
+                              <a class="nav-link" href="#">SALIR</a>
                             </li>
                           </ul>
                     </nav>
